Fix spelling errors in comments and update cSpell words in settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,25 @@
 {
     "cSpell.words": [
+        "Baccan",
+        "BPOKE",
+        "CLASSDATA",
         "Codacy",
+        "ENDCASE",
+        "ENDCLASS",
         "Expration",
+        "hbclass",
+        "HMAC",
         "Iiwia",
         "Iiwibm",
         "Ijox",
         "Ikpva",
         "Nqpvp",
+        "posixday",
+        "posixsec",
         "Qssw",
+        "RETU",
+        "STOD",
+        "VALTYPE",
         "XVCJ"
     ]
 }
