Enhance JWT functionality and tests: add new checks for HS384, HS512, issuer, subject, audience, expiration, not before, issued at, JWT ID, and signature validation; improve log output and fix comments.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,15 @@
         "ENDCLASS",
         "Expration",
         "hbclass",
+        "hbhrb",
         "HMAC",
         "Iiwia",
         "Iiwibm",
         "Ijox",
         "Ikpva",
+        "MRZSQ",
         "Nqpvp",
+        "odience",
         "posixday",
         "posixsec",
         "Qssw",
